--- a/mSystems/rev/mSys_suppl_rev.tex
+++ b/mSystems/rev/mSys_suppl_rev.tex
@@ -121,8 +121,8 @@
 \author[1,2,\#]{Carlos P. Garay}
 
 \affil[1]{Institute for Integrative Systems Biology (I2SysBio), 46980, Spain.}
-\affil[2]{Instituto de Fisica Corpuscular, CSIC-UVEG, P.O.  22085, 46071, Valencia, Spain.}
-\affil[3]{FISABIO, Avda de Catalunya, 21, 46020, Valencia, Spain.}
+\affil[2]{Instituto de Física Corpuscular, CSIC-UVEG, P.O.  22085, 46071, Valencia, Spain.}
+\affil[3]{FISABIO, Avda. de Catalunya, 21, 46020, Valencia, Spain.}
 \affil[4]{Cavanilles Institute of Biodiversity and Evolutionary Biology, UVEG, 46980, Spain.}
 \affil[5]{CIBER en Epidemiología y Salud Pública (CIBEResp), Madrid, Spain}
 
