New draft approach to rank stability islands, which leads to REVISION draft G
Changes to be committed:
	modified:   ../documentation/MediaInspector_macOSX_mSystems.jnlp
	modified:   figs/Fig4.eps
	modified:   figs/Fig5.eps
	deleted:    figs/_ed_supfig_corrank_IBS_C.pdf
	deleted:    figs/_ed_supfig_corrank_IBS_P1.pdf
	new file:   figs/supfig_corrank_HLS_StoolA_after.eps
	new file:   figs/supfig_corrank_HLS_StoolA_before.eps
	deleted:    figs/supfig_corrank_IBS_C.eps
	deleted:    figs/supfig_corrank_IBS_P1.eps
	modified:   mSys_MAIN_rev.pdf
	modified:   mSys_MAIN_rev.tex
	modified:   mSys_MandM_rev.tex
	modified:   mSys_discussion_rev.tex
	modified:   mSys_results_rev.tex

--- a/mSystems/rev/mSys_MAIN_rev.tex
+++ b/mSystems/rev/mSys_MAIN_rev.tex
@@ -4,7 +4,7 @@
 \documentclass[12pt,oneside,letterpaper]{article}
 
 % release codenumber (update it here!)
-\newcommand\releasecode{REVISION draft F}
+\newcommand\releasecode{REVISION draft G}
 
 %%% PACKAGES
 \usepackage{lmodern} % Activa fuentes y macros de Latin Modern
@@ -275,10 +275,10 @@ Reduced diversity and altered composition of the gut microbiome in individuals w
 \bibitem {bucci}  {\bf Bucci V, Tzen B, Li N, Simmons M, Tanoue T, Bogart E, Deng L, Yeliseyev V, Delaney ML, Liu Q, Olle B, Stein RR, Honda K, Bry L, Gerber GK.} 2016. MDSINE: Microbial Dynamical Systems INference Engine for microbiome time-series analyses. Genome Biol {\bf 17}:121.
 \bibitem {koenig} {\bf Koenig JE, Spor A, Scalfone N, Fricker AD, Stombaugh J, Knight R, Angenent LT, Ley RE.} 2011. Succession of microbial consortia in the developing infant gut microbiome. Proc Natl Acad Sci {\bf 108}:4578–4585.
 \bibitem {FD} {\bf Weber, J.} 1956. Fluctuation Dissipation Theorem. Phys. Rev. {\bf 101}:1620-6
-\bibitem {sislands1} {\bf Ng SC, Lam EFC, Lam TTY, Chan Y, Law W, Tse PCH, Kamm M a, Sung JJY, Chan FKL, Wu JCY.} 2013. Effect of probiotic bacteria on the intestinal microbiota in irritable bowel syndrome. J Gastroenterol Hepatol {\bf 28}:1624–31.
-\bibitem {sislands2} {\bf Carroll IM, Ringel-Kulka T, Siddle JP, Ringel Y.} 2012. Alterations in composition and diversity of the intestinal microbiota in patients with diarrhea-predominant irritable bowel syndrome. Neurogastroenterol Motil {\bf 24}:521-30
-\bibitem {sislands3} {\bf Xu D, Gao J, Gillilland M, Wu X, Song I, Kao JY, Owyang C.} 2014. Rifaximin alters intestinal bacteria and prevents stress-induced gut inflammation and visceral hyperalgesia in rats. Gastroenterology {\bf 146}:484–496.e4.
-\bibitem {sislands4} {\bf Rooks MG, Veiga P, Wardwell-scott LH, Tickle T, Segata N, Michaud M, Gallini CA, Beal C, van Hylckama-Vlieg JET, Ballal SA, Morgan XC, Glickman JN, Gevers D, Huttenhower C, Garrett WS, Hylckama-vlieg JET Van, Ballal SA, Morgan XC, Glickman JN, Gevers D, Huttenhower C, Garrett WS.} 2014. Gut microbiome composition and function in experimental colitis during active disease and treatment-induced remission. ISME J {\bf 8}:1403–17.
+%\bibitem {sislands1} {\bf Ng SC, Lam EFC, Lam TTY, Chan Y, Law W, Tse PCH, Kamm M a, Sung JJY, Chan FKL, Wu JCY.} 2013. Effect of probiotic bacteria on the intestinal microbiota in irritable bowel syndrome. J Gastroenterol Hepatol {\bf 28}:1624–31.
+%\bibitem {sislands2} {\bf Carroll IM, Ringel-Kulka T, Siddle JP, Ringel Y.} 2012. Alterations in composition and diversity of the intestinal microbiota in patients with diarrhea-predominant irritable bowel syndrome. Neurogastroenterol Motil {\bf 24}:521-30
+%\bibitem {sislands3} {\bf Xu D, Gao J, Gillilland M, Wu X, Song I, Kao JY, Owyang C.} 2014. Rifaximin alters intestinal bacteria and prevents stress-induced gut inflammation and visceral hyperalgesia in rats. Gastroenterology {\bf 146}:484–496.e4.
+%\bibitem {sislands4} {\bf Rooks MG, Veiga P, Wardwell-scott LH, Tickle T, Segata N, Michaud M, Gallini CA, Beal C, van Hylckama-Vlieg JET, Ballal SA, Morgan XC, Glickman JN, Gevers D, Huttenhower C, Garrett WS, Hylckama-vlieg JET Van, Ballal SA, Morgan XC, Glickman JN, Gevers D, Huttenhower C, Garrett WS.} 2014. Gut microbiome composition and function in experimental colitis during active disease and treatment-induced remission. ISME J {\bf 8}:1403–17.
 \bibitem {tikhonov} {\bf  Tikhonov M.} 2016. Community-level cohesion without cooperation. Elife {\bf 5}. 
 
 %% M&M
