--- a/mSystems/rev/mSys_results_rev.tex
+++ b/mSystems/rev/mSys_results_rev.tex
@@ -39,47 +39,42 @@ The model predicted two phases for the gut microbiome: a stable phase with large
 %%%
 \subsection*{Rank stability of the taxa} 
 
-The rank dynamics and stability plots in Figure \ref{fig:corrank_IBS_A} and \ref{fig:corrank_IBS_P2} show the variations in rank over time for the most dominant taxa and their calculated Rank Stability Index (RSI, as discussed in Material and Methods) for the taxa of a healthy subject (individual \emph{A}, Figure \ref{fig:corrank_IBS_A}) and for a subject diagnosed with IBS (patient \emph{P2}, Figure \ref{fig:corrank_IBS_P2}) of the IBS study\cite{IBS}. The taxa were listed ordered by their accumulated frequency over the time series, with the y-axis being the overall dominance axis for each sample set. Generally speaking, we observed that the most dominant taxa had the highest rank stability. 
+The rank dynamics and stability plots in Figure \ref{fig:corrank_HLS_abroad} and \ref{fig:corrank_HLS_returned} show the variations in rank over time for the most dominant taxa and their calculated Rank Stability Index (RSI, as discussed in Material and Methods) for the gut microbiome taxa of a healthy subject, the individual \emph{A} in the host lifestyle study \cite{hostlife}. The Figure \ref{fig:corrank_HLS_abroad} covers the period when the individual is travelling abroad and the Figure \ref{fig:corrank_HLS_returned} covers the subsequent period. The taxa were listed ordered by their accumulated frequency over the time series, with the y-axis being the overall dominance axis for each sample set. Generally speaking, we observed that the most dominant taxa had the highest rank stability. 
 
 \begin{figure}
 	\centering
 	%\vspace*{-10mm} % Corrects overbox of the figures
-	%\includegraphics[width=0.99\textwidth]{results/corrank/IBS_h_A_amplicons_family_Rank.pdf}
-	\includegraphics[width=0.99\textwidth]{figs/Fig4.eps}
-	\caption{Rank variation over time for the most dominant elements (taxa) and their calculated Rank Stability Index (as shown in Material and Methods) for samples from a healthy subject (individual \emph{A}) studied in our lab\cite{IBS}.}
-	\label{fig:corrank_IBS_A}
+	\includegraphics[width=1.0\textwidth]{figs/Fig4.eps}
+	\caption{Rank variation over time for the 50 most dominant elements (taxa) and their calculated Rank Stability Index (as shown in Material and Methods) for a special period (days 72 to 122, travelling abroad) belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}.}
+	\label{fig:corrank_HLS_abroad}
 \end{figure}
 
 \begin{figure}
 	\centering
-	%\vspace*{-10mm} % Corrects overbox of the figures
-	%\hspace*{-4.5mm}\includegraphics[width=0.99\textwidth]{results/corrank/IBS_P2_Metatranscriptores_Rank.pdf}
-	\includegraphics[width=0.99\textwidth]{figs/Fig5.eps}
-	\caption{Rank variation over time for the most dominant elements (taxa) and their calculated Rank Stability Index for samples from a subject diagnosed with irritable bowel syndrome (patient \emph{P2}) studied in our lab\cite{IBS}.}
-	\label{fig:corrank_IBS_P2}
+	%\vspace*{-10mm} % Corrects overbox of the figures \hspace*{-4.5mm}
+	\includegraphics[width=1.0\textwidth]{figs/Fig5.eps}
+	\caption{Rank variation over time for the 50 most dominant elements (taxa) and their calculated Rank Stability Index (as shown in Material and Methods) for an ordinary period (days 123 to 256, after the trip) belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}.}
+	\label{fig:corrank_HLS_returned}
 \end{figure}
 
-Nevertheless, in the particular case of the healthy individual in Figure \ref{fig:corrank_IBS_A}, \emph{Burkholderiales} and \emph{Betaproteobacteria} (the 18th and 25th taxa in the dominance axis) comparatively showed very low rank stability regarding similar dominant taxa while, on the other hand, \emph{Comamonadaceae}, \emph{Lactobacillaceae}, \emph{Fusobacteriaceae}, \emph{Aerococcaceae} and \emph{Carnobacteriaceae} showed higher stability than other more dominant taxa, forming a kind of \emph{rank stability island} for medium--ranked taxa around position 40 in the dominance axis, and thus colored brigher, since they show a moderately stable (RSI over 75\%).
+For the trip abroad in Figure \ref{fig:corrank_HLS_abroad}, beyond the differences in dominance for the particular taxa, we still observed that the most dominant were the most rank stable. Moreover, the medium-ranked taxa were quite rank unstable, mostly due to transient (often one or two consecutive samples) yet dramatic drops in their relative abundance, which usually occurred more than twice during their time series.
 
-In the IBS--diagnosed patient in Figure \ref{fig:corrank_IBS_P2}, beyond the differences in dominance for the particular taxa, we still observed that the most dominant were the most rank stable. However, as opposed to the healthy individual results, far from presenting a \emph{rank stability island}, the medium-ranked taxa were very rank unstable, mostly due to transient (often one or two consecutive samples) yet dramatic drops in their relative abundance, which usually occurred more than twice during their time series. For example, this was the case of \emph{Sphingobacteriales} with two non-consecutive samples dropping in the ranking to 111th. In other cases, the high rank instability came from a rank fluctuation throughout the time series, such as for \emph{Streptococcaceae} and \emph{Burkholderiales}, which ranked 26th and 29th, respectively, in the overall dominance axis but had a very low RSI.
+Nevertheless, in the particular case of the next period, the one subsequent to the trip, in Figure \ref{fig:corrank_HLS_returned}, some taxa showed higher stability than other more dominant taxa, forming a kind of \emph{rank stability islands} for medium--ranked taxa, since they show a moderately stable index (RSI roughly over 70\%). In particular, this is the case for the genera \emph{Actinomyces}, \emph{Leuconostoc}, \emph{Lachnobacterium}, \emph{Eggerthella}, \emph{Clostridium} and	\emph{Collinsella}. For those genera, both the overall rank and the RSI were clearly lower during the trip (RSI under 70\%). \emph{Actinomyces} and \emph{Lachnobacterium} are even not shown in Figure \ref{fig:corrank_HLS_abroad} because they sank to positions 56 and 77, respectively. On the other hand, \emph{Leuconostoc} was the less sensitive to the change of lifestyle.  
 
-We also found a \emph{rank stability island} for medium-ranked taxa in the other healthy subjects (\emph{B} and \emph{C}) in the IBS study\cite{IBS} together with its total absence for the other IBS--diagnosed patient (patient \emph{P1}), which also showed very high rank instability in its medium-ranked taxa. See Supplementary Figure \ref{supfig:corrank_IBS_C} and Supplementary Figure \ref{supfig:corrank_IBS_P1} for further examples of rank plots for a healthy and mild IBS--diagnosed patients, respectively.
+We also found those \emph{rank stability islands} for medium-ranked taxa in the other periods belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife} (see Supplementary Figure \ref{supfig:corrank_HLS_before} and Supplementary Figure \ref{supfig:corrank_HLS_after} for the corresponding rank plots).
 
 \begin{supfig}
 	\centering
-	%\vspace*{-10mm} % Corrects overbox of the figures
-	\includegraphics[width=0.99\textwidth]{figs/supfig_corrank_IBS_C.eps}
-	\caption{Rank variation over time for the most dominant elements (taxa) and their calculated RSI for samples from another healthy subject studied in our lab\cite{IBS}.}
-	\label{supfig:corrank_IBS_C}
+	\includegraphics[width=1.0\textwidth]{figs/supfig_corrank_HLS_StoolA_before.eps}
+	\caption{Rank variation over time for the 50 most dominant elements (taxa) and their calculated Rank Stability Index (as shown in Material and Methods) for an ordinary period (days 0 to 70, before the trip) belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}.}
+	\label{supfig:corrank_HLS_before}
 \end{supfig}
 
 \begin{supfig}
 	\centering
-	%\vspace*{-10mm} % Corrects overbox of the figures
-	%\hspace*{-4.5mm}
-	\includegraphics[width=0.99\textwidth]{figs/supfig_corrank_IBS_P1.eps}
-	\caption{Rank variation over time for the most dominant elements (taxa) and their calculated RSI for samples from a subject diagnosed with mild IBS and studied in our lab\cite{IBS}.}
-	\label{supfig:corrank_IBS_P1}
+	\includegraphics[width=1.0\textwidth]{figs/supfig_corrank_HLS_StoolA_after.eps}
+	\caption{Rank variation over time for the 50 most dominant elements (taxa) and their calculated Rank Stability Index (as shown in Material and Methods) for an ordinary period (days 257 to 364, further after the trip) belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}.}
+	\label{supfig:corrank_HLS_after}
 \end{supfig}
 
 %%%
